- Qual: Removed no more used external libraries.
- Qual: Cleaned a lot of dead code.
- Qual: More OOP (usage of "abstract", "static", ...), uniformize constructors.
- Qual: Fix a lot of checkstyle warnings.
- Qual: task #216 : Move /lib into /core/lib directory
- Qual: task #217 : Move core files into core directory (login, menus, triggers, boxes, modules)


***** ChangeLog for 3.1.1 compared to 3.1.0 *****

- New: Add option FACTURE_DEPOSITS_ARE_JUST_PAYMENTS. With this option added, 
       credit notes are not removed from total amount of invoice but are just 
       payments used to reducs remain to pay.
- Fix: Removed warnings during install.
- Fix: State into address of paypal payments were lost
- Fix: Removed Bare LF from emails sent with smtps method.
- Fix: Can show report on selected period.
- Fix: product removed from list after deleted into order.
- Fix: pgsql can connect using socket.


***** ChangeLog for 3.1 compared to 3.0 *****
WARNING: IE6 browser is no more supported in this version.
For users:
- New: War against number of clicks:
     - When adding a free bank transaction, form to add next one is still
       visible (save one click).
     - task #10969 : Add checkbox to close automatically invoice if
       payment is complete (save 3 clicks).
     - Reduce a step into supplier order workflow to save time. If user
       has permission to approve, order is approved when order is validated.
       (Save 2 clicks).
     - In commercial main menu, left menu are already opened. This save one click
       to open a proposal or order.
     - Can add a discount for third party, during invoice edition (and we 
       saved clicks again).
     - When creating a contract, sales representative are preset to user. This save
       4 clicks.
     - Can edit several fields in bank transaction line page into one update.
     - Creation of contacts from third party page go back to third party.
     - Preselect model if there is only one. This save 2 clicks. 